--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/karsonemili/teaaa.git"
+    "url": "https://github.com/zanzusgaming/teacol.git"
   },
   "dependencies": {
     "minti_fulkerson": "0.1.4"
