--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/karsonemili/teaaa/issues"
+    "url": "https://github.com/zanzusgaming/teacol/issues"
   },
-  "homepage": "https://github.com/karsonemili/teaaa#readme"
+  "homepage": "https://github.com/zanzusgaming/teacol#readme"
 }
